--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,9 +18,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tag: ['5.1', '5.2']
+        image: ['swift:5.1', 'swift:5.2', 'swiftlang/swift:nightly-focal']
     container:
-      image: swift:${{ matrix.tag }}
+      image: ${{ matrix.image }}
     steps:
     - name: Checkout
       uses: actions/checkout@v1
