--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: ['swift:5.1', 'swift:5.2', 'swift:5.3', 'swift:5.4']
+        image: ['swift:5.1', 'swift:5.4', 'swift:5.5', 'swift:5.6', 'swift:5.7']
     container:
       image: ${{ matrix.image }}
     steps:
