--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: ['swift:5.1', 'swift:5.4', 'swift:5.5', 'swift:5.6', 'swift:5.7']
+        image: ['swift:5.7', 'swift:5.8', 'swift:5.9']
     container:
       image: ${{ matrix.image }}
     steps:
