--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: ['swift:5.9', 'swift:5.10', 'swift:6.0']
+        image: ['swift:5.9', 'swift:5.10', 'swift:6.0', 'swift:6.1', 'swift:6.2']
     container:
       image: ${{ matrix.image }}
     steps:
